# NetworkDevicesMonitor

./: README.md
agent/: Makefile  README.md  agent.cc  agent_config.h  agent_config.toml  network
desktop_interface/: Makefile
desktop_interface/desktop_interface/: CMakeLists.txt  README.md  client.toml  desktop_config.h  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
includes/network/: accepted_client.cc  accepted_client.h  client.cc  client.h  local_server.cc  local_server.h  network.cc  network.h  network_error.h  server.cc  server.h
modules/: README.md
modules/logger/: Makefile  README.md  TODO.txt  agent_comm.h  file_handler.h  log_config.h  logger.cc  logger.toml
modules/virustotal/: README.md  communication.py  requirements.txt  virus.toml  virustotal.py
server/: Makefile  README.md  cert.pem  db.h  key.pem  server.cc  server_config.toml
server/components/: desktop_commands.cc  desktop_commands.h  desktop_server.cc  desktop_server.h
server/components/agent_server/: agent_server.cc  agent_server.h
server/components/desktop_server/: desktop_commands.cc  desktop_commands.h  desktop_server.cc  desktop_server.h
server/headers/: db.h  server_config.h  server_config_struct.h  toml.hpp
test/client/: Makefile  client.cc  network
test/server/: Makefile  server.cc
